--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7"
 eaf = "^0.2.2"
+toml = "^0.10.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
